# arsmedicatech-backend

./: .env.example  .gitignore  Dockerfile.flask  Makefile  README.md  app.py  celery_worker.py  generate_data.py  generate_tables.py  main.py  manage.py  mcp_config.example.json  mcp_config_default.json  mypy.ini  pyproject.toml  requirements.txt  run_tests.py  settings.py  webhook_receiver.py
.github/workflows/: qa.yaml
lib/: data_types.py  dummy_data.py  event_handlers.py  events.py  tasks.py
lib/infra/: event_bus.py
lib/llm/: agent.py  mcp_tools.py
lib/llm/v2/: hierarchical_agent.py
lib/migrations/: demo.py  demo_utils.py  setup_user_notes.py  setup_user_settings.py  setup_webhooks.py  update_clinic_org_fields.py  update_org_limits.py  vec.py
lib/models/: api_key.py  appointment.py  clinic.py  common.py  conversation.py  education.py  encounter.py  graph.py  icd.py  llm_chat.py  metrics.py  organization.py  patient.py  upload.py  user.py  webhook_subscription.py
lib/models/patient/: common.py  encounter_crud.py  encounter_model.py  main.py  patient_crud.py  patient_model.py  placeholders.py
lib/models/user/: user.py  user_notes.py  user_session.py  user_settings.py
lib/opt/: hypertension.py
lib/routes/: administration.py  api_keys.py  appointments.py  auth.py  chat.py  ddx.py  education.py  llm_agent.py  loginradius_auth.py  metrics.py  optimal.py  organizations.py  patients.py  testing.py  uploads.py  user_notes.py  users.py  webhooks.py
lib/services/: admin_service.py  api_key_service.py  appointment_service.py  auth_decorators.py  conversation_service.py  keycloak_service.py  llm_chat_service.py  loginradius_service.py  metrics_service.py  ocr.py  openai_security.py  scheduling.py  upload_service.py  user_notes_service.py  user_service.py  video_transcription.py
test/: conftest.py
test/integration/: check_database.py  debug_profile.py  debug_settings.py  init_database.py  integration.py  send_notification.py  simple_webhook_test.py  test_api.py  test_api_key_saving.py  test_apis.py  test_auth.py  test_create_and_retrieve.py  test_db.py  test_db_save.py  test_decision_trees.py  test_education.py  test_encryption.py  test_env.py  test_notifications.py  test_profile.py  test_profile_simple.py  test_redis.py  test_schema.py  test_settings_debug.py  test_user_creation.py  test_user_lookup.py  test_user_notes.py  test_webhook_debug.py  test_webhooks.py
test/unit/db/: test_surreal_graph.py
utils/: utils.py
utils/api_keys/: create_api_key.py  debug_api_key.py
