[project]
name = "arsmedicatech-backend"
version = "0.1.0"
description = "Backend of the arsmedicatech project."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohappyeyeballs>=2.4.4",
    "aiohttp>=3.11.11",
    "aiosignal>=1.3.2",
    "alabaster>=1.0.0",
    "amqp>=5.3.1",
    "annotated-types>=0.7.0",
    "anyio>=4.8.0",
    "arsmedicatech-nanoservices",
    "asgiref>=3.9.1",
    "async-timeout>=5.0.1",
    "attrs>=25.1.0",
    "authlib>=1.6.0",
    "babel>=2.17.0",
    "beautifulsoup4>=4.12.3",
    "billiard>=4.2.1",
    "blinker>=1.9.0",
    "boto3>=1.39.4",
    "botocore>=1.39.4",
    "cbor2>=5.6.5",
    "celery>=5.5.3",
    "cerberus>=1.3.7",
    "certifi>=2024.12.14",
    "cffi>=1.17.1",
    "charset-normalizer>=3.4.1",
    "click>=8.1.7",
    "click-didyoumean>=0.3.1",
    "click-plugins>=1.1.1.2",
    "click-repl>=0.3.0",
    "colorama>=0.4.6",
    "coverage>=7.9.2",
    "cryptography>=45.0.5",
    "cyclopts>=3.22.2",
    "distro>=1.9.0",
    "dnspython>=2.7.0",
    "docstring-parser>=0.16",
    "docutils>=0.21.2",
    "email-validator>=2.2.0",
    "exceptiongroup>=1.2.2",
    "factory-boy>=3.3.1",
    "faker>=33.3.1",
    "fastmcp>=2.10.4",
    "flask>=3.0.3",
    "flask-cors>=5.0.0",
    "frozenlist>=1.5.0",
    "furo>=2024.8.6",
    "h11>=0.14.0",
    "httpcore>=1.0.7",
    "httpx>=0.28.1",
    "httpx-sse>=0.4.1",
    "idna>=3.10",
    "imagesize>=1.4.1",
    "iniconfig>=2.1.0",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.4",
    "jiter>=0.8.2",
    "jmespath>=1.0.1",
    "jsonschema>=4.24.0",
    "jsonschema-specifications>=2025.4.1",
    "kombu>=5.5.4",
    "mariadb>=1.1.11",
    "markdown-it-py>=3.0.0",
    "markupsafe>=3.0.2",
    "marshmallow>=3.26.0",
    "mcp>=1.10.1",
    "mdit-py-plugins>=0.4.2",
    "mdurl>=0.1.2",
    "multidict>=6.1.0",
    "mypy>=1.16.1",
    "mypy-extensions>=1.1.0",
    "mysql-connector-python>=9.1.0",
    "mysqlclient>=2.2.7",
    "myst-parser>=4.0.1",
    "numpy>=2.2.6",
    "openai>=1.59.6",
    "openapi-pydantic>=0.5.1",
    "packaging>=24.2",
    "pandas>=2.3.1",
    "pathspec>=0.12.1",
    "pluggy>=1.6.0",
    "prometheus-client>=0.22.1",
    "prometheus-flask-exporter>=0.23.2",
    "prompt-toolkit>=3.0.51",
    "propcache>=0.2.1",
    "pycparser>=2.22",
    "pydantic>=2.11.7",
    "pydantic-core>=2.33.2",
    "pydantic-settings>=2.10.1",
    "pygments>=2.19.2",
    "pyjwt>=2.10.1",
    "pyperclip>=1.9.0",
    "pytest>=8.2.2",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "pytz>=2024.2",
    "pyyaml>=6.0.2",
    "redis>=6.2.0",
    "referencing>=0.36.2",
    "requests>=2.32.3",
    "rich>=14.0.0",
    "rich-rst>=1.3.1",
    "rpds-py>=0.26.0",
    "s3transfer>=0.13.0",
    "sentry-sdk>=2.32.0",
    "six>=1.17.0",
    "sniffio>=1.3.1",
    "snowballstemmer>=3.0.1",
    "soupsieve>=2.6",
    "sphinx>=8.1.3",
    "sphinx-autodoc-typehints>=3.0.1",
    "sphinx-basic-ng>=1.0.0b2",
    "sphinxcontrib-applehelp>=2.0.0",
    "sphinxcontrib-devhelp>=2.0.0",
    "sphinxcontrib-htmlhelp>=2.1.0",
    "sphinxcontrib-jsmath>=1.0.1",
    "sphinxcontrib-qthelp>=2.0.0",
    "sphinxcontrib-serializinghtml>=2.0.0",
    "sse-starlette>=2.4.1",
    "starlette>=0.47.1",
    "surrealdb>=1.0.6",
    "tomli>=2.3.0",
    "tqdm>=4.67.1",
    "types-requests>=2.32.4.20250611",
    "typing-extensions>=4.15.0",
    "typing-inspection>=0.4.1",
    "tzdata>=2025.2",
    "urllib3>=2.3.0",
    "uvicorn>=0.35.0",
    "vine>=5.1.0",
    "wcwidth>=0.2.13",
    "websockets>=14.2",
    "werkzeug>=3.1.3",
    "whisper>=1.1.10",
    "yarl>=1.18.3",
]

[tool.uv.sources]
arsmedicatech-nanoservices = { git = "https://github.com/ArsMedicaTech/arsmedicatech-nanoservices.git", rev = "main" }
